added some fonts

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,14 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"  rel="stylesheet">
     <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ url_for('static', filename='ico/favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href='https://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
     <style>
-
+body {
+  font-family: 'IM Fell English', serif;
+}
+h1, h2, h3, h4 {
+  font-family: 'IM Fell English', serif;
+}
     /* Move down content because we have a fixed navbar that is 50px tall */
 .jumbotron {
   margin-top: -20px;
