--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_b28ff3d8f4f7456cb41164b18e0a2ff9" style="width: 100%px; height: 100%px"></div>
+   <div class="folium-map" id="folium_10bf400ceca547a3bc5a625a7b8056b9" style="width: 100%px; height: 100%px"></div>
 
    <script>
 
@@ -94,7 +94,7 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_b28ff3d8f4f7456cb41164b18e0a2ff9', {
+      var map = L.map('folium_10bf400ceca547a3bc5a625a7b8056b9', {
                                        center:[45.5088, -73.5878],
                                        zoom: 12,
                                        maxBounds: bounds,
@@ -113,84 +113,84 @@
       
 
       
-      var circle_1 = L.circle([45.521938, -73.595276], 500, {
+      var circle_1 = L.circle([45.499700, -73.879623], 500, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00t0t_cwM7XJ5nJKz_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE Panasonic HiFi stereo system</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5281402300.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Curb Alert - Many children's articles</h3>\n                <h4>Ile Bizard, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5283314193.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([45.5115944, -73.6051013], 490, {
+      var circle_2 = L.circle([45.5020664, -73.5617624], 490, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Bio-K, Boost</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5280729066.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Satelite Diah & TV</h3>\n                <h4>West Island, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5283074819.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([45.5115944, -73.6051013], 480, {
+      var circle_3 = L.circle([45.454375, -73.545421], 480, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>3 air-conditioners + Stove</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5271670715.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>free tv</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5282588077.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([45.717530, -73.660820], 470, {
+      var circle_4 = L.circle([45.446856, -73.641429], 470, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_gzBd734wQVU_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE: Defective Citizen 27\" LCD Television (does not power on)</h3>\n                <h4>Terrebonne (J6X 2C3, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5279958342.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Weigelia bush free to good home</h3>\n                <h4>Ville St Pierre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5282445015.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([45.545406, -73.611905], 460, {
+      var circle_5 = L.circle([45.480169, -73.587291], 460, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00303_a3O7ZLE8mBl_300x300.jpg' height='auto' width='160px' />\n                <h3>Divan-lit/Sofa bed</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5279289337.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00v0v_aAu6JUf4YT6_300x300.jpg' height='auto' width='160px' />\n                <h3>River stones - free!!!</h3>\n                <h4>St-Henri (Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5282414879.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([45.540383, -73.628998], 450, {
+      var circle_6 = L.circle([45.486694, -73.576276], 450, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00D0D_91FB1Bb6AX_300x300.jpg' height='auto' width='160px' />\n                <h3>Free apartment-sized stove</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278974225.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00c0c_1S88Tib4Szf_300x300.jpg' height='auto' width='160px' />\n                <h3>Save 3 Murraya plants</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5282114043.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([45.4839326, -73.8081214], 440, {
+      var circle_7 = L.circle([45.5115944, -73.6051013], 440, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/01414_6WCIHvKorvw_300x300.jpg' height='auto' width='160px' />\n                <h3>Videotron illico Explorer 8300HD</h3>\n                <h4>Dollard-des-Ormeaux, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278775102.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>a few scraps of material</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5264890846.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([45.417403, -73.908638], 430, {
+      var circle_8 = L.circle([45.533741, -73.614178], 430, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00K0K_g6zLM35UuN3_300x300.jpg' height='auto' width='160px' />\n                <h3>BUMPER POOL TABLE 35X55 APPROX</h3>\n                <h4>WESTISLAND, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278218022.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00s0s_asFiv1ILi9q_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE: 2 vaccum cleaner bags</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5281834143.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([45.5115944, -73.6051013], 420, {
+      var circle_9 = L.circle([45.493762, -73.667107], 420, {
                             color: '#000000',
-                            fillColor: '#000000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE BOOKS on several topics plus FREE BOXES most Wednesday morns</h3>\n                <h4>ATWATER LIBRARY-WED-8:30 to 10:30, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277828865.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00w0w_45x3hqG8kNb_300x300.jpg' height='auto' width='160px' />\n                <h3>Free wood palettes</h3>\n                <h4>TMR, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5281760791.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
