--- a/templates/view.html
+++ b/templates/view.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-9 col-md-offset-1">
-    <h1>Recent items in {{ location.title() }}</h1>
+    <h1>Recent items in {{ rlocation.title() }}</h1>
   </div>
 </div>
 <div class="row">
